modified:   app/main.py 	modified:   app/public/index.html 	modified:   app/routes/root.py

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        background-image: url({{ root_path }}/static/brushed-alum.png);
+        background-image: url(/static/brushed-alum.png);
         background-repeat: repeat;
         background-attachment: fixed;
         background-color: #4b5161;
@@ -192,7 +192,7 @@
       <div class="row">
         <div class="col">
           <div class="animated fadeIn">
-            <img src="{{ root_path }}/static/profile.png" width="200" height="200" alt="">
+            <img src="/static/profile.png" width="200" height="200" alt="">
           </div>
           <h1 class="animated fadeIn">Vontainment.com</h1>
 
