modified:   app/public/index.html 	modified:   app/routes/root.py

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        background-image: url(/brushed-alum.png);
+        background-image: url(https://jupiter.vontainment.com/brushed-alum.png);
         background-repeat: repeat;
         background-attachment: fixed;
         background-color: #4b5161;
@@ -31,7 +31,7 @@
       }
 
       .col {
-        background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(/glass.png);
+        background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         border: 1px solid #66cc33;
         border-radius: 5px;
@@ -192,7 +192,7 @@
       <div class="row">
         <div class="col">
           <div class="animated fadeIn">
-            <img src="/profile.png" width="200" height="200" alt="">
+            <img src="https://jupiter.vontainment.com/profile.png" width="200" height="200" alt="">
           </div>
           <h1 class="animated fadeIn">Vontainment.com</h1>
 
