--- a/app/public/index.html
+++ b/app/public/index.html
@@ -31,7 +31,11 @@
       }
 
       .col {
-        background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
+        animation: color 15s ease infinite;
+        background: linear-gradient(-75deg,
+            #b3daff, rgba(179, 218, 255, 0.5),
+            #0366d6, rgba(3, 102, 214, 0.5));
+        background-size: 400% 400%;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         border: 1px solid #66cc33;
         border-radius: 5px;
@@ -85,6 +89,18 @@
 
         to {
           opacity: 1;
+        }
+      }
+
+      @keyframes color {
+
+        0%,
+        to {
+          background-position: 0 50%;
+        }
+
+        50% {
+          background-position: 100% 50%;
         }
       }
     </style>
@@ -201,10 +217,12 @@
     </div>
     <footer class="footer mt-auto py-3 text-center">
       <p class="animated fadeIn delay-1s">
-        Copyright © 2024 Vontainment Servers
+        Copyright © <span id="year"></span> Vontainment Servers
       </p>
     </footer>
-
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
 
   </body>
 
